--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "tsx watch src/http/server.ts",
-    "start": "node dist/http/server.js",
+    "start": "ts-node -r tsconfig-paths/register dist/http/server.js",
     "build": "tsup src --out-dir dist",
     "test": "vitest run --config ./vitest.config.unit.mts",
     "test:watch": "vitest --config ./vitest.config.unit.mts",
@@ -24,6 +24,8 @@
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^2.0.0",
     "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
