--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,1 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "src/http/server.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": [
-          "src/**/*",
-          "tsconfig.json"
-        ]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/src/http/server.ts"
-    }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/src/http/server.ts" }] }
