--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
+    "event-stream": "^4.0.1",
     "fastify": "^4.28.0",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^2.0.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/event-stream": "^4.0.5",
     "@types/node": "^22.0.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
